--- a/2. feladat/feladat.html
+++ b/2. feladat/feladat.html
@@ -16,19 +16,27 @@
 
 
     <h2>2. feladat</h2>
-    <ul>
+    <div>
         <li></li>
         <li></li>
         <li></li>
         <li></li>
-    </ul>
+    </div>
 
-    <h3>3. feladat</h3>
-    <ul>
+    <h2>3. feladat</h2>
+    <div>
         <li></li>
         <li></li>
         <li></li>
         <li></li>
-    </ul>
+    </div>
+
+    <h2>4. feladat</h2>
+    <div>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </div>
 </body>
 </html>
