--- a/fetch/fetch.html
+++ b/fetch/fetch.html
@@ -17,6 +17,19 @@
         <p id="brand"></p>
         <p id="year"></p>
     </div>
+    <table>
+        <thead>
+            <tr>
+                <th>id</th>
+                <th>model</th>
+                <th>brand</th>
+                <th>year</th>
+            </tr>
+        </thead>
+        <tbody id="adatokMegjelenitese">
+
+        </tbody>
+    </table>
     <p id="response"></p>
 
     <script src="fetchpelda.js"></script>
