input ellenőrzés hozzáadva + esztétikai változtatások az oldalon és a kódban

--- a/Objektumok/rendelo/rendelo.html
+++ b/Objektumok/rendelo/rendelo.html
@@ -9,20 +9,20 @@
 </head>
 
 <body>
-  
+
   <div id="idopontfoglalo">
     <h1>Rendelési időpont foglaló</h1>
-    <h3>Felhasználói adatok</h3>
+    <h3>Páciens adatok</h3>
     <label for="nev">Név:</label>
-    <input type="text" id="nev" placeholder="Vezetéknév Keresztnév"/>
+    <input type="text" id="nev" placeholder="Vezetéknév Keresztnév" />
     <br>
 
     <label for="email">E-mail cím: </label>
-    <input type="email" id="email" placeholder="pelda@vasvari.org"/>
+    <input type="email" id="email" placeholder="pelda@vasvari.org" />
     <br>
 
     <label for="telefon">Telefonszám: </label>
-    <input type="tel" id="telefon" placeholder="+36301234567"/>
+    <input type="tel" id="telefon" placeholder="+36301234567" />
 
     <h3>Szolgáltatás</h3>
     <select id="szolgaltatas">
@@ -41,12 +41,12 @@
 
     <h3>Időpont</h3>
     <label for="datum">Dátum: </label>
-    <input type="date" id="datum"/>
+    <input type="date" id="datum" />
     <br>
     <label for="ido">Idő: </label>
-    <input type="time" id="ido"/>
+    <input type="time" id="ido" />
 
-    <br> <br>
+    <div id="hibauzenet"></div>
     <button id="hozzaad">Hozzáadás</button>
   </div>
 
