--- a/fetchgyakorlas/autok.html
+++ b/fetchgyakorlas/autok.html
@@ -3,18 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+    />
     <link rel="stylesheet" href="autok.css" />
     <title>Autók</title>
   </head>
   <body>
-    
-    <div class="container pt-2">
-        <h1 class="text-center text-white">Autók</h1>
-        <div id="adatokMegjelenitese" class="w-80 mx-auto row g-4">
-        </div>
+    <div id="h1background">
+      <h1 class="text-center text-white">Autók</h1>
     </div>
-    
+    <div class="container pt-2">
+      <div id="adatokMegjelenitese" class="w-80 mx-auto row g-4"></div>
+    </div>
 
     <script src="autok.js"></script>
   </body>
